my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WWRNSTMT/WWRNSTMT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WWRNSTMT.dml:16:5: warning WEXPERIMENTAL: Use of unsupported feature: _warning statement
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WWRNSTMT.dml:20:9: warning WEXPERIMENTAL: Use of unsupported feature: _warning statement
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WWRNSTMT.dml:25:5: warning WEXPERIMENTAL: Use of unsupported feature: _warning statement
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\testing.dml:23:9: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_WWRNSTMT.dml:16:5: warning WWRNSTMT: foo
